<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/btnBotonSimple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="click" />

    <ToggleButton
        android:id="@+id/btnToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBotonSimple"
        android:textOff="off"
        android:textOn="on" />

    <Switch
        android:id="@+id/btnSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnToggle"
        android:switchPadding="10dp"
        android:text="@string/seleccion"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageButton android:id="@+id/btnImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSwitch"
        android:contentDescription="@string/icono_estrella"
        android:src="@drawable/ic_estrella"
        android:padding="16dp" />

    <LinearLayout
        android:id="@+id/barraBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarStyle">
        <Button android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Aceptar"
            style="?android:attr/buttonBarButtonStyle" />
        <Button android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cancelar"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <CheckBox  android:id ="@+id/checkbox_meat"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/meat"
        android:layout_below="@+id/btnImagen" />

    <RadioGroup
        android:id="@+id/rdg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_meat">
        <RadioButton android:id="@+id/radio_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femenino"
            />
        <RadioButton android:id="@+id/radio_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"

            />
        <RadioButton android:id="@+id/radio_otro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otro"
            />
    </RadioGroup>

</RelativeLayout>
